--- a/SleepREST/src/main/resources/static/index.html
+++ b/SleepREST/src/main/resources/static/index.html
@@ -20,9 +20,13 @@
 	<div class="main row">
 
 		<div class="row header">
+		<div class="col-4"></div>
+		<div class="col-4">
 			<h1>Sleep Tracker:</h1>
 			<h4>Use data to discover what may help you get a better night's
 				rest!</h4>
+		</div>
+		<div class="col-4"></div>
 		</div>
 		<div class="col-2"></div>
 		<div class="col-8">
